--- a/index.html
+++ b/index.html
@@ -1,1 +1,181 @@
-<h2>Hello</h2>
+<html>
+	<div>
+		<h1> «Заголовок 1-уровня» </h1>
+		<h2> «Заголовок 2-уровня» </h2>
+			<b> случайный </b> текст 
+		<h3> «Заголовок 3-уровня» </h3>
+			<i>случайный</i> текст
+		<h4> «Заголовок 4-уровня» </h4>
+		<p>Случайный текст </p>
+		<h5> «Заголовок 5-уровня» </h5>
+			<del> Случайный текст </del>
+			<ins> Случайный текст </ins>
+		<h6> «Заголовок 6-уровня»</h6> 
+		Случайный
+			<sub>текст </sub> тескт
+			<sup> случайный </sup>
+	</div>
+	<div>
+		<a href="https://ru.wikipedia.org/wiki/%D0%9A%D0%B2%D0%B0%D0%BD%D1%82%D0%BE%D0%B2%D0%B0%D1%8F_%D0%BC%D0%B0%D1%88%D0%B8%D0%BD%D0%B0_%D0%A2%D1%8C%D1%8E%D1%80%D0%B8%D0%BD%D0%B3%D0%B0" target="_blank">Квантовая машина Тьюринга</a><br />
+		<a href="mailto: dkotelnikov2002@mail.ru" > dkotelnikov2002@mail.ru</a>
+		
+		<h1> «Заголовок 1-уровня» </h1>
+			<p>	случайный текст </p>
+		<h2 id="#1"> «Заголовок 2-уровня» </h2>
+			<p>	случайный текст </p>
+		<h2 id="#2"> «Заголовок 2-уровня» </h2>
+			<p>	случайный текст </p>
+		<nav>
+				<a href="#1">ссылка</a>
+				<a href="#2">ссылка</a>
+		</nav>
+		<a href="http://komok.fl2.fosite.ru/file/chunk69/240734/8572/%D0%9D%D0%BE%D0%B2%D1%8B%D0%B9%20%D1%82%D0%B5%D0%BA%D1%81%D1%82%D0%BE%D0%B2%D1%8B%D0%B9%20%D0%B4%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82.txt">        Не открывать</a>
+	</div>
+	<div>
+		<ol>
+			<li>Kotelnikov Daniil</li>
+			<li>Berezhnoy Ivan</li>
+		</ol>
+		<ul>
+			<li>Раухваргер А.Б.</li>
+			<li>Сидорова Л.А.</li>
+		</ul>
+		<dl>
+			<a href="https://ru.wikipedia.org/wiki/%D0%91%D0%B5%D1%81%D0%BA%D0%BB%D0%B0%D1%81%D1%81%D0%BE%D0%B2%D0%B0%D1%8F_%D0%B0%D0%B4%D1%80%D0%B5%D1%81%D0%B0%D1%86%D0%B8%D1%8F"><b>бессклассовая адресация</b></a>
+			<a href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%B4_%D0%A5%D0%B0%D1%84%D1%84%D0%BC%D0%B0%D0%BD%D0%B0"><b>код Хаффмана</b></a>
+		</dl>
+	</div>
+	<div>
+		<img src="https://59.img.avito.st/640x480/4604364059.jpg">
+		<a href=https://www.ystu.ru/"><img src="https://www.ystu.ru/%D0%A0%D0%B8%D1%81%D1%83%D0%BD%D0%BE%D0%BA1.JPG" alt="ЯГТУ"></a>
+	</div>	
+	<div>
+		<table>
+			<tr>
+				<td>1</td>
+				<td>2</td>
+				<td>3</td>
+			</tr>
+			<tr>
+				<td>4</td>
+				<td>5</td>
+				<td>6</td>
+			</tr>
+			<tr>
+				<td>7</td>
+				<td>8</td>
+				<td>9</td>
+			</tr>
+		</table>
+		<table>
+			<tr>
+				<td>1</td>
+				<td colspan="2">23</td>
+			</tr>
+			<tr>
+				<td>4</td>
+				<td>5</td>
+				<td>6</td>
+			</tr>
+			<tr>
+				<td>7</td>
+				<td>8</td>
+				<td>9</td>
+			</tr>
+		</table>
+		<table>
+			<tr>
+				<td>1</td>
+				<td>2</td>
+				<td>3</td>
+			</tr>
+			<tr>
+				<td rowspan="2">47</td>
+				<td>5</td>
+				<td>6</td>
+			</tr>
+			<tr>
+				<td>8</td>
+				<td>9</td>
+			</tr>
+		</table>
+		<table>
+			<tr>
+				<th>1</th>
+				<th>2</th>
+				<th>3</th>
+				<th>4</th>
+				<th>5</th>
+				<th>6</th>
+			</tr>
+			<tr>
+				<td>7</td>
+				<td>8</td>
+				<td>9</td>
+				<td>10</td>
+				<td>11</td>
+				<td>12</td>
+			</tr>
+			<tr>
+				<td>13</td>
+				<td>14</td>
+				<td>15</td>
+				<td>16</td>
+				<td>17</td>
+				<td>18</td>
+			</tr>
+			<tr>
+				<td>19</td>
+				<td>20</td>
+				<td>21</td>
+				<td>22</td>
+				<td>23</td>
+				<td>24</td>
+			</tr>
+		</table>
+	</div>
+	<div>
+		<form>
+			<input type="text" min="3" required placeholder="Имя">
+			<input type="text" min="3" required placeholder="Фамилия">
+			<input type="text" min="3" placeholder="Отчество">
+			<input type="submit" value="Ok">
+		</form>
+		<form>
+			<input type="number" required >
+		</form>
+		<form>
+			<p>Пол</p>
+			<label>
+			муж
+				<input type="checkbox" value="муж">
+			жен
+				<input type="checkbox" value="жен">
+			</label>
+			<input type="text" min="3" required placeholder="Имя">
+			<input type="text" min="3" required placeholder="Фамилия">
+			<input type="text" min="3" placeholder="Отчество">
+			<p></p>
+			<input type="number" required placeholder="Возраст">
+			<input type="tel" required placeholder="телефон">
+			<input type="mail" required placeholder="example@test.com">
+		</form>
+		<select>
+			<option>ЭПИ-11</option>
+			<option>Тоже ЭПИ-11</option>
+		</select>
+		<input type="password" required placeholder="пароль">
+		<input type="password" required placeholder="повторите пароль">
+		<p></p>
+		<label>Учусь платно
+			<input type="checkbox" value="Учусь платно">
+		</label>
+		<input type="submit" value="Зарегистрироваться">
+	</div>
+	<div>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/5JAJ_tjMyGI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<audio controls>
+			<source src="audio.mp3" type="audio/mpeg">
+		</audio>
+	</div>
+</html>
