--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 		
 		<h1> «Заголовок 1-уровня» </h1>
 			<p>	случайный текст </p>
-		<h2 id="#1"> «Заголовок 2-уровня» </h2>
+		<h2 id="1"> «Заголовок 2-уровня» </h2>
 			<p>	случайный текст </p>
-		<h2 id="#2"> «Заголовок 2-уровня» </h2>
+		<h2 id="2"> «Заголовок 2-уровня» </h2>
 			<p>	случайный текст </p>
 		<nav>
 				<a href="#1">ссылка</a>
 				<a href="#2">ссылка</a>
 		</nav>
-		<a href="http://komok.fl2.fosite.ru/file/chunk69/240734/8572/%D0%9D%D0%BE%D0%B2%D1%8B%D0%B9%20%D1%82%D0%B5%D0%BA%D1%81%D1%82%D0%BE%D0%B2%D1%8B%D0%B9%20%D0%B4%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82.txt">        Не открывать</a>
+		<A href="https://ru.sefon.pro/api/mp3_download/direct/114899/3vUCANpOa4Unfjb3KVIRJgI3ZthMafDxrg1gTbvgLz2HrMc07NDjg3fTtoQHfUN_AAsVNrBjC_5pbKMKErW_M2XvwmdtKczpy7kugUtzotww8kkh-wkK11pYEz-wDf7lYPmnpl4vvZkWXL4zsOFkv5tFFGUCATcbZx7f22s/" download>Скачать песню</A>
 	</div>
 	<div>
 		<ol>
@@ -41,16 +41,18 @@
 			<li>Сидорова Л.А.</li>
 		</ul>
 		<dl>
-			<a href="https://ru.wikipedia.org/wiki/%D0%91%D0%B5%D1%81%D0%BA%D0%BB%D0%B0%D1%81%D1%81%D0%BE%D0%B2%D0%B0%D1%8F_%D0%B0%D0%B4%D1%80%D0%B5%D1%81%D0%B0%D1%86%D0%B8%D1%8F"><b>бессклассовая адресация</b></a>
-			<a href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%B4_%D0%A5%D0%B0%D1%84%D1%84%D0%BC%D0%B0%D0%BD%D0%B0"><b>код Хаффмана</b></a>
+			<dt><a href="https://ru.wikipedia.org/wiki/%D0%91%D0%B5%D1%81%D0%BA%D0%BB%D0%B0%D1%81%D1%81%D0%BE%D0%B2%D0%B0%D1%8F_%D0%B0%D0%B4%D1%80%D0%B5%D1%81%D0%B0%D1%86%D0%B8%D1%8F"><b>бессклассовая адресация</b></a></dt>
+			<dl>Метод IP-адресации, позволяющий гибко управлять пространством IP-адресов, не используя жёсткие рамки классовой адресации. Использование этого метода позволяет экономно использовать ограниченный ресурс IP-адресов, поскольку возможно применение различных масок подсетей к различным подсетям.</dl>
+			<dt><a href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%B4_%D0%A5%D0%B0%D1%84%D1%84%D0%BC%D0%B0%D0%BD%D0%B0"><b>код Хаффмана</b></a></dt>
+			<dl>Алгоритм оптимального префиксного кодирования алфавита с минимальной избыточностью. Был разработан в 1952 году аспирантом Массачусетского технологического института Дэвидом Хаффманом при написании им курсовой работы. В настоящее время используется во многих программах сжатия данных.</dl>
 		</dl>
 	</div>
 	<div>
-		<img src="https://59.img.avito.st/640x480/4604364059.jpg">
+		<img src="https://59.img.avito.st/640x480/4604364059.jpg" alt="Хочу сдать лабу пожалуйста">
 		<a href=https://www.ystu.ru/"><img src="https://www.ystu.ru/%D0%A0%D0%B8%D1%81%D1%83%D0%BD%D0%BE%D0%BA1.JPG" alt="ЯГТУ"></a>
 	</div>	
 	<div>
-		<table>
+		<table border>
 			<tr>
 				<td>1</td>
 				<td>2</td>
@@ -67,7 +69,7 @@
 				<td>9</td>
 			</tr>
 		</table>
-		<table>
+		<table border >
 			<tr>
 				<td>1</td>
 				<td colspan="2">23</td>
@@ -83,7 +85,7 @@
 				<td>9</td>
 			</tr>
 		</table>
-		<table>
+		<table border>
 			<tr>
 				<td>1</td>
 				<td>2</td>
@@ -99,7 +101,7 @@
 				<td>9</td>
 			</tr>
 		</table>
-		<table>
+		<table border>
 			<tr>
 				<th>1</th>
 				<th>2</th>
@@ -146,12 +148,8 @@
 		</form>
 		<form>
 			<p>Пол</p>
-			<label>
-			муж
-				<input type="checkbox" value="муж">
-			жен
-				<input type="checkbox" value="жен">
-			</label>
+			<p><input name="pol" type="radio" value="male"> муж</p>
+			<p><input name="pol" type="radio" value="female" checked> жен</p>
 			<input type="text" min="3" required placeholder="Имя">
 			<input type="text" min="3" required placeholder="Фамилия">
 			<input type="text" min="3" placeholder="Отчество">
@@ -159,7 +157,6 @@
 			<input type="number" required placeholder="Возраст">
 			<input type="tel" required placeholder="телефон">
 			<input type="mail" required placeholder="example@test.com">
-		</form>
 		<select>
 			<option>ЭПИ-11</option>
 			<option>Тоже ЭПИ-11</option>
@@ -171,6 +168,7 @@
 			<input type="checkbox" value="Учусь платно">
 		</label>
 		<input type="submit" value="Зарегистрироваться">
+		</form>
 	</div>
 	<div>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/5JAJ_tjMyGI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
