--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 		<form>
 			<p>Пол</p>
 			<p><input name="pol" type="radio" value="male"> муж</p>
-			<p><input name="pol" type="radio" value="female" checked> жен</p>
+                        <label><input name="pol" type="radio" value="male"> муж</label>
 			<input type="text" min="3" required placeholder="Имя">
 			<input type="text" min="3" required placeholder="Фамилия">
 			<input type="text" min="3" placeholder="Отчество">
