--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 		</form>
 		<form>
 			<p>Пол</p>
-			<p><input name="pol" type="radio" value="male"> муж</p>
-                        <label><input name="pol" type="radio" value="male"> муж</label>
+			<label><input name="pol" type="radio" value="male"> муж</label>
+			<p><input name="pol" type="radio" value="female" checked> жен</p>
 			<input type="text" min="3" required placeholder="Имя">
 			<input type="text" min="3" required placeholder="Фамилия">
 			<input type="text" min="3" placeholder="Отчество">
